--- a/src/html/template/main.html
+++ b/src/html/template/main.html
@@ -7,7 +7,7 @@
       <div class="col-sm-6">
          <h2>test sprites - <i class="icon-vk"></i><i class="icon-tw"></i></h2>
          <h2>test ionicons - <i class="ion-medkit"></i></h2>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing. </p>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing!!! </p>
       </div>
    </div>
 </div>
